crates/djls-python/tests/snapshots/corpus__extraction_snapshots@repos__archivebox__archivebox__core__templatetags__config_tags.py.snap
---
source: crates/djls-python/tests/corpus.rs
expression: snapshot(result)
input_file: crates/djls-corpus/.corpus/repos/archivebox/archivebox/core/templatetags/config_tags.py
---
tag_rules:
  "archivebox.core.templatetags.config_tags::tag::get_config":
    arg_constraints:
      - Min: 2
      - Max: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: key
        required: true
        kind: Variable
        position: 0
    supports_as_var: true
filter_arities: {}
block_specs: {}
